# python-projects

./: 2 Vote Counter.py  LICENSE  README.md  age.py  pyproject.toml
.github/workflows/: ci.yaml
Key-Words-Finder/: README.md  main.py
ML-mini/age-classifier/: README.md  age_classifier.py
ML-mini/age-classifier/tests/: test_age_classifier.py
Prime-Divisors-Counter/: README  main.py
World-Cup-Group-Table/: README  main.py
age-classifier/: README.md  age.py
tests/: test_basic.py
vote-counter/: Vote Counter.py  test_vote_counter.py
vote-counter/vote-counter/: README.md
